ktunnel-injector/kubernetes/mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "ibb-ktunnel-sidecar-injector"
  labels:
    com.ibbproject/cfg: ibb-ktunnel-sidecar-injector
webhooks:
- name: "ktunnel.injector.ibbproject.com"
  failurePolicy: "Ignore" # we fail "open" if the webhook is down hard
  # failurePolicy: "Fail"
  sideEffects: None
  admissionReviewVersions: 
    - v1
  rules:
  - operations: [ "CREATE" ]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  clientConfig:
    # https://github.com/kubernetes/kubernetes/blob/v1.10.0-beta.1/staging/src/k8s.io/api/admissionregistration/v1beta1/types.go#L218
    # note: k8s is smart enough to use 443 or the only exposed port on the service
    # note: this requires the service to serve TLS directly (not thru ingress)
    service:
      name: "ibb-ktunnel-sidecar-injector"
      namespace: "kube-system"
      path: "/mutate"   # what /url/slug to send requests at
    # See README.md for how this was generated!
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZyekNDQTVjQ0ZBSGdpcktwQjBCNk9wOElOY3owWDZWR3VnNlFNQTBHQ1NxR1NJYjNEUUVCQ3dVQU1JR1MKTVFzd0NRWURWUVFHRXdKVlV6RVJNQThHQTFVRUNBd0lUbVYzSUZsdmNtc3hGakFVQmdOVkJBY01EVTVsZHlCWgpiM0pySUVOcGRIa3hEREFLQmdOVkJBb01BMGxDUWpFbE1DTUdBMVVFQXd3Y2FXSmlMV3QwZFc1dVpXd3RjMmxrClpXTmhjaTFwYm1wbFkzUnZjakVqTUNFR0NTcUdTSWIzRFFFSkFSWVVZV1J0YVc1QWFXSmljSEp2YW1WamRDNWoKYjIwd0lCY05Nak14TWpBM01EUXdNREU1V2hnUE5EYzJNVEV4TURJd05EQXdNVGxhTUlHU01Rc3dDUVlEVlFRRwpFd0pWVXpFUk1BO [...]
